# sgx-elps

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: control_struct.h  hint.h  libOS_tls.h  linked_list.h  logging.h  queue.h  request.h  sgx_arch.h  sgx_user.h  spin_lock.h  ssa_dump.h  swapper.h  swapper_interface.h  sys_format.h  syscall_format.h
libOS/: .sched.cpp.swp  .sched.h.swp  CMakeLists.txt  allocator.cpp  allocator.h  async_request.cpp  bitmap.h  futex.cpp  futex.h  hint.cpp  interrupt.cpp  interrupt.h  libOS_main.cpp  libos.h  linked_list.h  malloc.cpp  misc.cpp  mmap.cpp  mmap.h  panic.cpp  panic.h  sched.cpp  sched.h  singleton.h  slub.cpp  slub.h  ssa_dump.cpp  start.S  start.s  sys_format.cpp  syscall_format.cpp  tests.cpp  thread_local.cpp  thread_local.h  tsx.h  user_thread.cpp  user_thread.h  util.h
libOS/mm/: chunk_alloc.cpp  chunk_alloc.h  linked_list.h  rbtree.cpp  rbtree.h
loader/: CMakeLists.txt  Makefile  aesm.pb.cc  aesm.pb.h  aesm.proto  elf.h  enclave_manager.cpp  enclave_manager.h  enclave_thread.cpp  enclave_thread.h  enclave_threadpool.cpp  enclave_threadpool.h  entry.S  entry.s  load_elf.cpp  load_elf.h  loader.c  loader.cpp  loader_main.cpp  logging.cpp  logging.h  privatekey  publickey  py_test.py  signature.cpp  signature.h  ssa_dump.cpp
musl/: config.mak
musl/arch/x86_64/: pthread_arch.h  syscall_arch.h
musl/ldso/: dynlink.c
musl/src/aio/: aio.c  lio_listio.c
musl/src/conf/: sysconf.c
musl/src/dirent/: opendir.c  readdir.c
musl/src/env/: __init_tls.c  __libc_start_main.c
musl/src/exit/: _Exit.c  abort.c  assert.c
musl/src/fcntl/: fcntl.c  open.c  posix_fadvise.c  posix_fallocate.c
musl/src/internal/: pthread_impl.h  syscall.h  syscall_ret.c
musl/src/internal/x86_64/: syscall.s
musl/src/ipc/: msgctl.c  semctl.c  shmctl.c
musl/src/linux/: epoll.c  eventfd.c  inotify.c  sbrk.c  signalfd.c
musl/src/malloc/: expand_heap.c  lite_malloc.c  malloc.c  memalign.c
musl/src/misc/: getrlimit.c  ioctl.c  pty.c  realpath.c  setrlimit.c  syscall.c
musl/src/mman/: mmap.c  munmap.c  posix_madvise.c
musl/src/mq/: mq_notify.c  mq_unlink.c
musl/src/network/: accept4.c  if_indextoname.c  if_nametoindex.c  netlink.c  res_msend.c  socket.c  socketpair.c
musl/src/process/: fexecve.c  fork.c  posix_spawn.c
musl/src/sched/: affinity.c  sched_getcpu.c
musl/src/signal/: block.c  raise.c  sigaction.c  sigsetjmp_tail.c
musl/src/stat/: fchmod.c  fchmodat.c  fstat.c  utimensat.c
musl/src/stdio/: __fdopen.c  __fopen_rb_ca.c  __stdio_write.c  __stdout_write.c  fopen.c  freopen.c  pclose.c  popen.c  remove.c  tempnam.c  tmpfile.c  tmpnam.c
musl/src/thread/: __set_thread_area.c  __syscall_cp.c  __timedwait.c  __unmapself.c  __wait.c  pthread_attr_setinheritsched.c  pthread_barrier_wait.c  pthread_cancel.c  pthread_cond_timedwait.c  pthread_create.c  pthread_getschedparam.c  pthread_join.c  pthread_kill.c  pthread_mutex_trylock.c  pthread_mutexattr_setrobust.c  pthread_setschedparam.c  pthread_setschedprio.c  pthread_sigmask.c  synccall.c  thrd_sleep.c  thrd_yield.c
musl/src/thread/arm/: __set_thread_area.c
musl/src/thread/x86_64/: __set_thread_area.s
musl/src/time/: __map_file.c  clock_getcpuclockid.c  clock_gettime.c  nanosleep.c  timer_create.c  timer_delete.c  times.c
musl/src/unistd/: alarm.c  dup.c  dup2.c  dup3.c  faccessat.c  fchdir.c  fchown.c  getegid.c  geteuid.c  getgid.c  getpgrp.c  getpid.c  getppid.c  getuid.c  pipe.c  pipe2.c  setxid.c  sync.c
samples/: CMakeLists.txt  Makefile  client.c  hello  hello.c  read_dst.txt  server.c  testepoll.c  testhint.cpp  testpthread.cpp  testslub.cpp  xtext.cpp
samples/libevent/: config.h  config.status  evutil_time.c  libtool
samples/libevent/include/event2/: event-config.h
samples/libevent/sample/: dns-example  event-read-fifo  hello-world  http-connect  http-server  signal-test  time-test
samples/libevent/sample/.deps/: dns-example.Po  event-read-fifo.Po  hello-world.Po  hostcheck.Po  http-connect.Po  http-server.Po  signal-test.Po  time-test.Po
samples/libevent/test/: bench  bench_cascade  bench_http  bench_httpclient  regress  rpcgen-attempted  test-changelist  test-closed  test-dumpevents  test-eof  test-fdleak  test-init  test-ratelim  test-time  test-weof
samples/libevent/test/.deps/: bench.Po  bench_cascade.Po  bench_http.Po  bench_httpclient.Po  test-changelist.Po  test-closed.Po  test-dumpevents.Po  test-eof.Po  test-fdleak.Po  test-init.Po  test-ratelim.Po  test-time.Po  test-weof.Po  test_regress-regress.Po  test_regress-regress.gen.Po  test_regress-regress_buffer.Po  test_regress-regress_bufferevent.Po  test_regress-regress_dns.Po  test_regress-regress_et.Po  test_regress-regress_finalize.Po  test_regress-regress_http.Po  test_regress-regress_listener.Po  test_regress-regress_main.Po  test_regress-regress_minheap.Po  test_regress-regress_rpc.Po  test_regress-regress_testutils.Po  test_regress-regress_thread.Po  test_regress-regress_util.Po  test_regress-regress_zlib.Po  test_regress-tinytest.Po
samples/memcached/: memcached.c  thread.c
swapper/: CMakeLists.txt  debug_request.cpp  debug_request.h  scheduler_request.cpp  sleep.cpp  sleep.h  swap_request.cpp  swap_request.h  swapper_main.cpp  syscall_request.cpp  syscall_request.h
test/: CMakeLists.txt  Makefile  runtest.sh  test.cpp  test.h  testMalloc  test_malloc.cpp  testall
